# umya-spreadsheet

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  USS.code-workspace  clippy.toml  justfile  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: helper.rs  lib.rs  random.rs  reader.rs  structs.rs  traits.rs  version.rs  writer.rs
src/helper/: address.rs  binary.rs  color.rs  const_str.rs  coordinate.rs  crypt.rs  date.rs  formula.rs  html.rs  number_format.rs  range.rs  string_helper.rs  utils.rs
src/helper/crypt/: algo.rs  constants.rs  key.rs  mod.rs  utils.rs  utils_algo.rs  utils_key.rs  utils_other.rs
src/helper/number_format/: date_formater.rs  fraction_formater.rs  number_formater.rs  percentage_formater.rs
src/reader/: driver.rs  xlsx.rs
src/reader/xlsx/: chart.rs  comment.rs  content_types.rs  doc_props_app.rs  doc_props_core.rs  doc_props_custom.rs  drawing.rs  drawing_charts.rs  drawing_rels.rs  drawing_spreadsheet.rs  embeddings.rs  jsa_project_bin.rs  media.rs  pivot_cache.rs  pivot_table.rs  printer_settings.rs  shared_strings.rs  styles.rs  table.rs  theme.rs  threaded_comment.rs  vba_project_bin.rs  vml_drawing.rs  vml_drawing_rels.rs  workbook.rs  workbook_rels.rs  worksheet.rs  worksheet_rels.rs
src/structs/: address.rs  alignment.rs  alternate_content.rs  alternate_content_choice.rs  alternate_content_fallback.rs  anchor.rs  attributes.rs  auto_filter.rs  axis.rs  bold.rs  boolean_value.rs  border.rs  border_properties_type.rs  border_style_values.rs  borders.rs  borders_crate.rs  break.rs  byte_value.rs  cache_field.rs  cache_fields.rs  cache_source.rs  calculation.rs  cell.rs  cell_format.rs  cell_formats.rs  cell_formula.rs  cell_formula_values.rs  cell_raw_value.rs  cell_style.rs  cell_style_formats.rs  cell_styles.rs  cell_value.rs  cells.rs  chart.rs  chart_type.rs  color.rs  color_scale.rs  colors.rs  column.rs  column_breaks.rs  (+167 more)
src/structs/custom_properties/: custom_document_property.rs  custom_document_property_value.rs  properties.rs
src/structs/drawing/: adjust_value_list.rs  alpha.rs  background_color.rs  background_fill_style_list.rs  bevel.rs  bevel_bottom.rs  bevel_preset_values.rs  bevel_top.rs  black_white_mode_values.rs  blip.rs  blip_fill.rs  body_properties.rs  camera.rs  charts.rs  color2_type.rs  color_scheme.rs  default_run_properties.rs  east_asian_font.rs  effect_list.rs  effect_style.rs  effect_style_list.rs  end_connection.rs  end_paragraph_run_properties.rs  extension_list.rs  extents.rs  fill_rectangle.rs  fill_style_list.rs  font_collection_type.rs  font_scheme.rs  foreground_color.rs  format_scheme.rs  glow.rs  gradient_fill.rs  gradient_stop.rs  gradient_stop_list.rs  graphic.rs  graphic_data.rs  group_shape_locks.rs  latin_font.rs  light_rig.rs  (+67 more)
src/structs/office/: excel.rs
src/structs/office2010/: drawing.rs  excel.rs
src/traits/: adjustment_coordinate.rs  adjustment_coordinate_with_2sheet.rs  adjustment_coordinate_with_sheet.rs  adjustment_value.rs
src/writer/: csv.rs  driver.rs  streaming_writer.rs  xlsx.rs
tests/: integration_test.rs  streaming_writer_test.rs
tests/test_files/: RemoveRow.xlsx  aaa.xlsm  aaa.xlsx  aaa_2.xlsx  aaa_empty.xlsx  aaa_insertCell.xlsx  aaa_large.xlsx  aaa_move_range.xlsx  aaa_theme.xlsx  alignment_indent_input.xlsx  book_lock.xlsx  google.xlsx  issue_147.xlsx  issue_162.xlsx  issue_178.xlsx  issue_178_2.xlsx  issue_181.xlsx  issue_181_2.xlsx  issue_184.xlsx  issue_184_2.xlsx  issue_185.xlsx  issue_187.xlsx  issue_188.xlsx  issue_188_2.xlsx  issue_188_3.xlsx  issue_188_4.xlsx  issue_189.xlsx  issue_190.xlsx  issue_194.xlsx  issue_194_2.xlsx  issue_200.xlsx  issue_201.xlsx  issue_206.xlsx  issue_208.xlsx  issue_210.xlsx  issue_215.xlsx  issue_216.xlsx  issue_217.xlsx  issue_219.xlsx  issue_220.xlsx  (+24 more)
(+250 files in other folders)
