[package]
name = "umya-spreadsheet"
version = "2.2.0"
authors = ["MathNya <umya.net.info@gmail.com>"]
repository = "https://github.com/MathNya/umya-spreadsheet"
keywords = ["excel", "spreadsheet", "xlsx", "reader", "writer"]
categories = ["parser-implementations", "encoding", "text-processing"]
license = "MIT"
readme = "README.md"
description = "umya-spreadsheet is a library written in pure Rust to read and write xlsx file."
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
base64 = "0.22.1"
byteorder = "1.5"
cbc = "0.1.2"
cfb = "0.10.0"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
encoding_rs = "0.8.35"
fancy-regex = "0.14.0"
hmac = "0.12.1"
html_parser = "0.7.0"
image = { version = "0.25.5", optional = true }
md-5 = "0.10.6"
num-traits = "0.2.19"
paste = "1.0.15"
phf = { version = "0.11.2", features = ["macros"] }
quick-xml = { version = "0.37.1", features = ["serialize"] }
rand = "0.8.5"
rgb = "0.8.50"
sha2 = "0.10.8"
thousands = "0.2.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
doctest = false

[features]
default = ["image"]
