[package]
name = "umya-spreadsheet"
version = "3.0.0"
authors = ["MathNya <umya.net.info@gmail.com>"]
repository = "https://github.com/MathNya/umya-spreadsheet"
keywords = ["excel", "spreadsheet", "xlsx", "reader", "writer"]
categories = ["parser-implementations", "encoding", "text-processing"]
license = "MIT"
readme = "README.md"
description = "umya-spreadsheet is a library written in pure Rust to read and write xlsx file."
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.9"
base64 = "0.22.1"
byteorder = "1.5"
cbc = "0.2"
cfb = "0.14"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
encoding_rs = "0.8.35"
fancy-regex = "0.18"
hmac = "0.13"
html5gum = "0.8"
imagesize = "0.14"
jiff = { version = "0.2", default-features = false }
md-5 = "0.11"
num-traits = "0.2.19"
phf = { version = "0.13", features = ["macros"] }
quick-xml = { version = "0.40", features = ["serialize"] }
rand = "0.10"
rgb = "0.8"
sha2 = "0.11"
thousands = "0.2.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
hex-literal = "1.1"
rstest = { version = "0.26.1", default-features = false }


[features]
